--- a/scripts/tempo.yml
+++ b/scripts/tempo.yml
@@ -8,7 +8,9 @@ distributor:
     otlp:
       protocols:
         grpc:
+          endpoint: 0.0.0.0:4317
         http:
+          endpoint: 0.0.0.0:4318
 
 # The ingester is responsible for batching up traces and pushing them to TempoDB.
 ingester:
